syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.betpawa.wallet";
option java_outer_classname = "WalletClass";
option objc_class_prefix = "WC";

package wallet;

service WalletService {
  rpc deposit(DepositRequest) returns (DepositResponse) {}
  rpc withdraw(WithdrawRequest) returns (Empty) {}
  rpc balance(BalanceRequest) returns (BalanceResponse) {}
}

message DepositRequest {
  int32 userID = 1;
  float amount = 2;
  CURRENCY currency = 3;	
}

message DepositResponse{
  int32 userID = 1;
  float amount = 2;
  CURRENCY currency = 3;	
}


message WithdrawRequest  {
  int32 userID = 1;
  float amount = 2;
  CURRENCY currency = 3;	
}

message BalanceRequest  {
  int32 userID = 1;
}


message BalanceResponse {
  float amount = 1;
  CURRENCY currency = 3;	
}


enum CURRENCY {
EUR =0;
USD = 1;
GBP = 2;

}

message Empty {

}